--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ترجمان</title>
     <meta name="description" content="أداة ذكية لاستخراج وترجمة ترجمات الفيديو إلى العربية" />
